# cogbase

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
api/: app_cache.py  config.py  dependencies.py  example_config.yaml  example_system_config.yaml  factory.py  main.py  models.py  namespaced_store.py  registry.py  system_config.py  system_resources.py  system_store.py  task_runner.py
api/routers/: app_generate.py  applications.py  generate.py  namespaces.py  skills.py  system.py  whoami.py
benchmarks/: README.md  avg_correctness.py  bench_app_extraction.yaml  bench_app_simple.yaml  run_cogbase.py
benchmarks/expirements/: merge_phases_results.py  merge_phases_scores.py
benchmarks/graphrag/: README.md  bench_app_extraction_medical.yaml  bench_app_simple.yaml  merge_results.py  print_scores.py  run_cogbase.py
benchmarks/llm_evaluation/: README.md  compare_scores.py
benchmarks/locomo/: README.md  locomo_app.yaml  run_cogbase.py  token_f1_score.py
cogbase/: __init__.py
cogbase/config/: __init__.py  config.py  models.py  prompt.py  stores.py
cogbase/core/: __init__.py  app.py  app_generator.py  application.py  basemodel_to_schema.py  json_schema.py  json_schema_to_basemodel.py  models.py  query_runner.py  registry.py  runner.py  (+2 more)
docs/: api.md  architecture.md  concepts.md  doc-registry.md  episodic-memory.md  knowledge-graph-decision.md  long-term-memory.md  memory.md  pipeline.md  workflow.md
examples/: app_generator.py  cogbase_client.py  demo_ui.html  docx_render.py  gen_demos_json.py
server/: Dockerfile.demo  README.md  cogbase_system.demo.yaml  docker-compose.demo.yml  docker_hub_demo.sh  run_docker_hub_demo.sh
tests/: live_setup.py
ui/: index.html  package-lock.json  package.json
(+321 files in other folders)
