[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogbase"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "pandas>=2.0"]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
langchain = ["langchain-text-splitters>=0.3"]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff", "faiss-cpu>=1.7", "langchain-text-splitters>=0.3"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
