[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogbase"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "pandas>=2.0"]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
s3 = ["boto3>=1.34"]
langchain = ["langchain-text-splitters>=0.3"]
postgres = ["asyncpg>=0.29"]
pgvector = ["asyncpg>=0.29", "pgvector>=0.3", "numpy>=1.24"]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.29", "pyyaml>=6.0", "openai>=1.0", "python-multipart>=0.0.9", "cachetools>=5.0", "jinja2>=3.1", "markitdown[all]>=0.1.5"]
all = ["cogbase[api,faiss,langchain,s3,postgres,pgvector]"]
demo = ["cogbase[api,faiss,langchain]"]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff", "faiss-cpu>=1.7", "langchain-text-splitters>=0.3", "asyncpg>=0.29", "pgvector>=0.3", "numpy>=1.24", "jinja2>=3.1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
